--- a/public/re0.html
+++ b/public/re0.html
@@ -15,7 +15,7 @@
     <div class="header-index">
         <div id="header_home" class="container">
             <div class="logo">
-                <img src="imagens/EaUXuSMXgAYHsUA.png" onclick="volta_inicio()">
+                <img src="imagens/logo.png" onclick="volta_inicio()">
             </div>
             <div class="navbar">
                 <button class="btn-header" onclick="abre_jogo()">Jogos</button>
@@ -80,8 +80,9 @@
     </div>
     <div class="footer">
         <div class="container">
-            <img src="imagens/EaUXuSMXgAYHsUA.png">
-            <label for="footer">©2022 - Resident Evil</label>
+            <img src="imagens/logo.png">
+            <label for="footer">Termos de Uso   -   Política de Privacidade</label>
+            <label for="footer">©2022 - Resident Evil<br><br></label>
         </div>
     </div>
 </body>
