--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div class="header-index">
         <div class="container">
             <div class="logo">
-                <img src="imagens/EaUXuSMXgAYHsUA.png">
+                <img src="imagens/logo.png">
             </div>
             <div class="navbar-index">
                 <button class="btn-index" onclick="login_index()">Login</button>
