--- a/public/inicio.html
+++ b/public/inicio.html
@@ -15,10 +15,21 @@
     <div class="header-index">
         <div id="header_home" class="container">
             <div class="logo">
-                <img src="imagens/EaUXuSMXgAYHsUA.png" onclick="volta_inicio()">
+                <img src="imagens/logo.png" onclick="volta_inicio()">
             </div>
             <div class="navbar">
                 <button class="btn-header" onclick="abre_jogo()">Jogos</button>
+                    <div id="lista_header" class="lista-header">
+                        <a onclick="inserir_acesso(1)" href="re0.html">Resident Evil 0</a>
+                        <a onclick="inserir_acesso(2)" href="re1.html">Resident Evil 1</a>
+                        <a onclick="inserir_acesso(3)" href="re2.html">Resident Evil 2</a>
+                        <a onclick="inserir_acesso(4)" href="re3.html">Resident Evil 3</a>
+                        <a onclick="inserir_acesso(5)" href="re4.html">Resident Evil 4</a>
+                        <a onclick="inserir_acesso(6)" href="re5.html">Resident Evil 5</a>
+                        <a onclick="inserir_acesso(7)" href="re6.html">Resident Evil 6</a>
+                        <a onclick="inserir_acesso(8)" href="re7.html">Resident Evil 7</a>
+                        <a onclick="inserir_acesso(9)" href="re8.html">Resident Evil 8</a>
+                    </div>
                 <button class="btn-header" onclick="abre_personagens()">Personagens</button>
                 <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
@@ -28,21 +39,11 @@
         </div>
     </div>
 
-    <div id="lista_header" class="lista-header">
-        <a onclick="inserir_acesso(1)" href="re0.html">Resident Evil 0</a>
-        <a onclick="inserir_acesso(2)" href="re1.html">Resident Evil 1</a>
-        <a onclick="inserir_acesso(3)" href="re2.html">Resident Evil 2</a>
-        <a onclick="inserir_acesso(4)" href="re3.html">Resident Evil 3</a>
-        <a onclick="inserir_acesso(5)" href="re4.html">Resident Evil 4</a>
-        <a onclick="inserir_acesso(6)" href="re5.html">Resident Evil 5</a>
-        <a onclick="inserir_acesso(7)" href="re6.html">Resident Evil 6</a>
-        <a onclick="inserir_acesso(8)" href="re7.html">Resident Evil 7</a>
-        <a onclick="inserir_acesso(9)" href="re8.html">Resident Evil 8</a>
-    </div>
-
     <div class="banner-imagem">
         <div class="container-inicio">
             <img src="Imagens/csm_village__10__bb50bcc8bd.jpg">
+            <label class="welcome">Bem-Vindo ao mundo de 
+                Resident Evil</label>
         </div>
 
     </div>
@@ -56,8 +57,10 @@
     </div>
     <div class="footer">
         <div class="container">
-            <img src="imagens/EaUXuSMXgAYHsUA.png">
-            <label for="footer">©2022 - Resident Evil</label>
+            <img src="imagens/logo.png">
+            <label for="footer">Termos de Uso   -   Política de Privacidade</label>
+            <label for="footer">©2022 - Resident Evil<br><br></label>
+            
         </div>
     </div>
 </body>
