Atualização do conteúdo das páginas

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -14,7 +14,7 @@
     <div class="main-cadastro">
         <div class="left-cadastro">
             <img src="imagens/leonkennedycorte.png" class="left-login-image" alt="Leon Kennedy">
-            <img src="imagens/44670.png" class="voltar" onclick="voltar()">
+            <img src="imagens/seta-direita.png" class="voltar" onclick="voltar()">
         </div>
         <div class="right-cadastro">
             <div class="card-cadastro">
@@ -29,7 +29,7 @@
                 </div>
                 <div class="textfield">
                     <label for="usuario">E-mail</label>
-                    <input type="text" id="cad_email" placeholder="">
+                    <input type="text" id="cad_email" placeholder="Ex. leonkennedy@email.com">
                 </div>
                 <div class="textfield">
                     <label for="senha">Senha</label>
