--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script src="JS/script.js"></script>
     <title>Resident Evil</title>
 </head>
-<body id="img-body" style="background-image: url(Imagens/img2665781812123.webp);">
+<body>
     <div class="header-index">
         <div class="container">
             <div class="logo">
@@ -22,12 +22,18 @@
     </div>
     <div class="banner-index">
         <div class="container">
+            <img src="imagens/img2665781812123.webp">
+            <label class="welcome-index">Cadastre-se hoje e tenha acesso 
+                a todo o contúdo do universo de Resident Evil
+            </label>
+        </div>
         </div>
     </div>
     <div class="footer">
         <div class="container">
-            <img src="imagens/EaUXuSMXgAYHsUA.png">
-            <label for="footer">©2022 - Resident Evil</label>
+            <img src="imagens/logo.png">
+            <label for="footer">Termos de Uso   -   Política de Privacidade</label>
+            <label for="footer">©2022 - Resident Evil<br><br></label>
         </div>
     </div>
     
