--- a/public/re0.html
+++ b/public/re0.html
@@ -42,7 +42,7 @@
 
     <div class="banner-imagem">
         <div class="container-personagens">
-            <img src="Imagens/re0logo.png">
+            <img src="Imagens/re0back.jpg">
         </div>
 
     </div>
@@ -54,9 +54,9 @@
         Personagens: Rebecca Chambers , Billy Coen, Dr. James Marcus, Dr. William Birkin,  Albert Wesker, Capitão Enrico Marini, Edward Dewey.</p>
         
         <p>historia</p>
-        Na noite de 23 de julho de 1998, um trem de propriedade da Umbrella, o Ecliptic Express, (imagem do trem)passa pelas Montanhas Arklay, lar de várias instalações da Umbrella. Observado do alto da montando por um homem misterioso cantando uma canção de coro, o trem é atacado por uma série de sanguessugas, que quebram as janelas e atacam os ocupantes.
+        <p class="informacoes">Na noite de 23 de julho de 1998, um trem de propriedade da Umbrella, o Ecliptic Express, (imagem do trem)passa pelas Montanhas Arklay, lar de várias instalações da Umbrella. Observado do alto da montando por um homem misterioso cantando uma canção de coro, o trem é atacado por uma série de sanguessugas, que quebram as janelas e atacam os ocupantes.
 
-        <p class="informacoes">Duas horas depois, o Bravo Team sobrevoa as mesmas montanhas. Parte do grupo de forças especiais da polícia STARS, a missão do Bravo Team é investigar uma série de assassinatos canibais inexplicáveis ​​e ataques de animais centrados na região. O helicóptero apresenta mau funcionamento e cai. Enquanto o piloto Kevin Dooley fica para trás, Bravo Team procura a área imediata e encontra um veículo Marine MP naufragado. Seus motoristas estão mortos, e seu prisioneiro – Marine 2LT. Billy Coen – está longe de ser encontrado. Partindo do pressuposto de que Coen matou seus guardas após o acidente como meio de fuga, o capitão Enrico Marini tem a equipe para encontrá-lo.
+        Duas horas depois, o Bravo Team sobrevoa as mesmas montanhas. Parte do grupo de forças especiais da polícia STARS, a missão do Bravo Team é investigar uma série de assassinatos canibais inexplicáveis ​​e ataques de animais centrados na região. O helicóptero apresenta mau funcionamento e cai. Enquanto o piloto Kevin Dooley fica para trás, Bravo Team procura a área imediata e encontra um veículo Marine MP naufragado. Seus motoristas estão mortos, e seu prisioneiro – Marine 2LT. Billy Coen – está longe de ser encontrado. Partindo do pressuposto de que Coen matou seus guardas após o acidente como meio de fuga, o capitão Enrico Marini tem a equipe para encontrá-lo.
 
         Pesquisando a Raccoon Forest, Rebecca Chambers , a médica da equipe, encontra o Ecliptic Express parado no meio do caminho e com as luzes apagadas. Em sua busca, ela encontra assentos manchados de sangue. Verificando um passageiro, ele acorda e se aproxima dela, com Rebecca logo sendo cercada por mais zumbis. Escapando deles, ela se aproxima da frente do trem e encontra Billy. Billy não coopera, recusa-se a ser detido e está armado com uma arma que tirou dos PMs. Depois que Billy sai da carruagem, o membro da Equipe Bravo, Edward Dewey pula pela janela. Ele fica gravemente ferido depois de ser atacado pelo que descreve como “zumbis e monstros” e desmaia, aparentemente morto. Ele é então seguido por cães mutantes que o perseguiram pela floresta. Marini liga para Rebecca no rádio, sem saber dos monstros, e avisa que ele descobriu outros documentos dizendo que Billy foi condenado à morte por assassinar 23 pessoas e foi levado para um hospital psiquiátrico. Explorando o convés superior do trem, Rebecca encontra outro homem sentado em uma sala de jantar. Perguntando se ele está bem, o homem se dissolve em uma pilha de sanguessugas, por estarem imitando a forma humana. Ela é salva por Billy, permitindo-lhes formar confiança. Eles vêem o homem estranho na montanha, cercado por sanguessugas enquanto canta.
 
