Criação das ultimas páginas e botão de sair

--- a/public/re0.html
+++ b/public/re0.html
@@ -23,7 +23,7 @@
                 <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
                 <button class="btn-header" onclick="abre_virus()">virus</button>
-                <button class="btn-header" onclick="abre_perfil()">Perfil</button>
+                <button class="btn-header" onclick="sair()">Sair</button>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
         <div class="container">
         <p>Informações</p>
         <p class="informacoes">Lançamento: 2002
-        Data: 23 de  julho de 1998
+        Data dos acontecimentos: 23 de  julho de 1998
         Personagens: Rebecca Chambers , Billy Coen, Dr. James Marcus, Dr. William Birkin,  Albert Wesker, Capitão Enrico Marini, Edward Dewey.</p>
         
         <p>historia</p>
