--- a/public/inicio.html
+++ b/public/inicio.html
@@ -13,7 +13,7 @@
 
 <body onload="mais_acessados(()=> inserir_dados()), setTimeout(atualizar, 700)">
     <div class="header-index">
-        <div id="header_home" class="container">
+        <div id="header_home5" class="container">
             <div class="logo">
                 <img src="imagens/logo.png" onclick="volta_inicio()">
             </div>
@@ -34,7 +34,7 @@
                 <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
                 <button class="btn-header" onclick="abre_virus()">virus</button>
-                <button class="btn-header" onclick="abre_perfil()">Perfil</button>
+                <button class="btn-header" onclick="sair()">Sair</button>
             </div>
         </div>
     </div>
