--- a/public/re7.html
+++ b/public/re7.html
@@ -23,7 +23,7 @@
                 <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
                 <button class="btn-header" onclick="abre_virus()">virus</button>
-                <button class="btn-header" onclick="abre_perfil()">Perfil</button>
+                <button class="btn-header" onclick="sair()">Sair</button>
             </div>
         </div>
     </div>
@@ -48,18 +48,29 @@
     </div>
     <div class="conteudo">
         <div class="container">
-        <p>Informações</p>
-        <p class="informacoes">Lançamento: 2017
-        Data: 
-        Personagens: </p>
-        
-        <p>historia</p>
-        <p class="informacoes">Resident Evil 7 é um título que busca renovação à série. Lançado durante a celebração dos vinte anos de existência da franquia, ele é um retorno às raízes do terror e do Survival Horror, ao mesmo tempo em que procura abrir um novo arco de trama e um nível mais profundo de imersão, ao optar pela perspectiva da câmera em primeira pessoa e a compatibilidade com o VR.
+            <p>Informações</p>
+            <p class="informacoes">Lançamento: 2017
+                Data dos acontecimentos: 19 de Julho de 2017
+                Personagens Ethan Winters, Mia Winters, Jack Baker, Marguerite Baker, Lucas Baker, Zoe Baker, Vovó, Eveline: </p>
 
-            A história gira em torno do personagem Ethan Winters, que recebe um e-mail de sua esposa, Mia, desaparecida há três anos, pedindo para ir buscá-la em uma propriedade na cidadezinha de Dulvey, no meio de Louisiana. Para o azar de Ethan, ele acaba se envolvendo em um verdadeiro pesadelo, enquanto tenta fugir da casa e da fúria da bizarra família Baker.
-            
-            Além do retorno de diversos elementos do gênero Survival Horror, coisas também tradicionais nos Resident Evil clássicos estão de volta, como as salas de salvamento com baús e a gravação dos progressos. Resolução de puzzles para abrir caminhos e pegar armas também estão presentes no título, assim como inimigos estrategicamente posicionados dentro do contexto da história. Com uma proposta mais intimista e uma trama em escala muito menor do que a dos jogos antecessores, Resident Evil 7 é um legítimo Resident Evil e acolhe tanto os jogadores novatos como os já fãs da série.</p>
-        <br><br><br><br>
+            <p>historia</p>
+            <p class="informacoes">Resident Evil 7 é um título que busca renovação à série. Lançado durante a celebração
+                dos vinte anos de existência da franquia, ele é um retorno às raízes do terror e do Survival Horror, ao
+                mesmo tempo em que procura abrir um novo arco de trama e um nível mais profundo de imersão, ao optar
+                pela perspectiva da câmera em primeira pessoa e a compatibilidade com o VR.
+
+                A história gira em torno do personagem Ethan Winters, que recebe um e-mail de sua esposa, Mia,
+                desaparecida há três anos, pedindo para ir buscá-la em uma propriedade na cidadezinha de Dulvey, no meio
+                de Louisiana. Para o azar de Ethan, ele acaba se envolvendo em um verdadeiro pesadelo, enquanto tenta
+                fugir da casa e da fúria da bizarra família Baker.
+
+                Além do retorno de diversos elementos do gênero Survival Horror, coisas também tradicionais nos Resident
+                Evil clássicos estão de volta, como as salas de salvamento com baús e a gravação dos progressos.
+                Resolução de puzzles para abrir caminhos e pegar armas também estão presentes no título, assim como
+                inimigos estrategicamente posicionados dentro do contexto da história. Com uma proposta mais intimista e
+                uma trama em escala muito menor do que a dos jogos antecessores, Resident Evil 7 é um legítimo Resident
+                Evil e acolhe tanto os jogadores novatos como os já fãs da série.</p>
+            <br><br><br><br>
 
 
         </div>
@@ -67,9 +78,10 @@
     <div class="footer">
         <div class="container">
             <img src="imagens/logo.png">
-            <label for="footer">Termos de Uso   -   Política de Privacidade</label>
+            <label for="footer">Termos de Uso - Política de Privacidade</label>
             <label for="footer">©2022 - Resident Evil<br><br></label>
         </div>
     </div>
 </body>
+
 </html>
