--- a/public/re8.html
+++ b/public/re8.html
@@ -23,7 +23,7 @@
                 <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
                 <button class="btn-header" onclick="abre_virus()">virus</button>
-                <button class="btn-header" onclick="abre_perfil()">Perfil</button>
+                <button class="btn-header" onclick="sair()">Sair</button>
             </div>
         </div>
     </div>
@@ -48,16 +48,24 @@
     </div>
     <div class="conteudo">
         <div class="container">
-        <p>Informações</p>
-        <p class="informacoes">Lançamento: 2021
-        Data:  7 de maio de 2021
-        Personagens: </p>
-        
-        <p>historia</p>
-        <p class="informacoes">Resident Evil Village é o oitavo jogo “numerado” da franquia. O título é uma sequência direta à história de Ethan Winters, que teve início em Resident Evil 7 e aos eventos que envolveram a família Baker. Depois de escaparem dos pesadelos na Louisiana, Ethan e a esposa, Mia Winters, vivem em uma localidade isolada na Europa e próximos de uma misteriosa Vila. O casal tem um bebê, Rosemary Winters, ou apenas Rose. Mas essa vida pacata, quase como um conto de fadas, é repentinamente abalada com o surgimento de Chris Redfield.
+            <p>Informações</p>
+            <p class="informacoes">Lançamento: 2021
+                Data: 9 de fevereiro de 2021
+                Personagens: Ethan Winters, Mia Winters, Roremary Winters, Chris Redfield, Duque, Mãe Miranda, Alcina Dimitrescu, Bela Dimitrescu, Cassandra Dmitrecu, Daniela Dimitrescu, Karl Helsenberg, Donna Beneviento, Salvatore Moreau, Houded Wolf, A Velha.</p>
 
-            Chris, responsável por salvar o casal em RE7, mata Mia e sequestra Rose. Ethan é levado por um esquadrão da B.S.A.A., Hound Wolf (Lobo de Caça), liderado pelo antes “herói”. Um misterioso acidente acontece no percurso dessa captura e o pai da bebê inicia uma busca desesperada pela criança, enquanto tenta entender os motivos que levaram Chris a destruir sua família.</p>
-        <br><br><br><br>
+            <p>historia</p>
+            <p class="informacoes">Resident Evil Village é o oitavo jogo “numerado” da franquia. O título é uma
+                sequência direta à história de Ethan Winters, que teve início em Resident Evil 7 e aos eventos que
+                envolveram a família Baker. Depois de escaparem dos pesadelos na Louisiana, Ethan e a esposa, Mia
+                Winters, vivem em uma localidade isolada na Europa e próximos de uma misteriosa Vila. O casal tem um
+                bebê, Rosemary Winters, ou apenas Rose. Mas essa vida pacata, quase como um conto de fadas, é
+                repentinamente abalada com o surgimento de Chris Redfield.
+
+                Chris, responsável por salvar o casal em RE7, mata Mia e sequestra Rose. Ethan é levado por um esquadrão
+                da B.S.A.A., Hound Wolf (Lobo de Caça), liderado pelo antes “herói”. Um misterioso acidente acontece no
+                percurso dessa captura e o pai da bebê inicia uma busca desesperada pela criança, enquanto tenta
+                entender os motivos que levaram Chris a destruir sua família.</p>
+            <br><br><br><br>
 
 
         </div>
@@ -65,9 +73,10 @@
     <div class="footer">
         <div class="container">
             <img src="imagens/logo.png">
-            <label for="footer">Termos de Uso   -   Política de Privacidade</label>
+            <label for="footer">Termos de Uso - Política de Privacidade</label>
             <label for="footer">©2022 - Resident Evil<br><br></label>
         </div>
     </div>
 </body>
+
 </html>
