--- a/public/re4.html
+++ b/public/re4.html
@@ -20,9 +20,7 @@
             <div class="navbar">
                 <button class="btn-header" onclick="abre_jogo()">Jogos</button>
                 <button class="btn-header" onclick="abre_personagens()">Personagens</button>
-                <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
-                <button class="btn-header" onclick="abre_virus()">virus</button>
                 <button class="btn-header" onclick="sair()">Sair</button>
             </div>
         </div>
@@ -42,7 +40,7 @@
 
     <div class="banner-imagem">
         <div class="container-personagens">
-            <img src="Imagens/Resident_Evil4logo.png">
+            <img src="Imagens/re4back.webp">
         </div>
 
     </div>
