--- a/public/re6.html
+++ b/public/re6.html
@@ -20,9 +20,7 @@
             <div class="navbar">
                 <button class="btn-header" onclick="abre_jogo()">Jogos</button>
                 <button class="btn-header" onclick="abre_personagens()">Personagens</button>
-                <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
-                <button class="btn-header" onclick="abre_virus()">virus</button>
                 <button class="btn-header" onclick="sair()">Sair</button>
             </div>
         </div>
@@ -42,7 +40,7 @@
 
     <div class="banner-imagem">
         <div class="container-personagens">
-            <img src="Imagens/re0logo.png">
+            <img src="Imagens/re6back.jpg">
         </div>
 
     </div>
@@ -50,7 +48,7 @@
         <div class="container">
             <p>Informações</p>
             <p class="informacoes">Lançamento: 2012
-                Data dos acontecimentos: 24 de dezembro ded 2012
+                Data dos acontecimentos: 24 de dezembro de 2012
                 Personagens: Leon S. Kennedy, Chris Redfield, Ada Wong, Jake Muller, Helena Harper, Piers Nivans, Sherry Birkin, Derek Simmons, Adam Benford, Ingrid Hunnigan, Carla Radames </p>
 
             <p>historia</p>
