--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header-index">
         <div class="container">
-            <div class="logo">
+            <div class="logo" id="idlogo">
                 <img src="imagens/logo.png">
             </div>
             <div class="navbar-index">
