--- a/public/personagens.html
+++ b/public/personagens.html
@@ -20,9 +20,7 @@
             <div class="navbar">
                 <button class="btn-header" onclick="abre_jogo()">Jogos</button>
                 <button class="btn-header" onclick="abre_personagens()">Personagens</button>
-                <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
-                <button class="btn-header" onclick="abre_virus()">virus</button>
                 <button class="btn-header" onclick="sair()">Sair</button>
             </div>
         </div>
@@ -42,68 +40,72 @@
 
     <div class="banner-imagem">
         <div class="container-personagens">
-            <img src="Imagens/Resident_Evil1logo.png">
+            <img src="Imagens/persoback.png">
         </div>
 
     </div>
     <div class="criaturas">
         <div class="container">
             <div class="conteudo">
-                <img class="img-conteudo" src="">
-                <label class="titulo">Personagens</label>
+                <img class="img-conteudo" src="Imagens/leonrosto.jpg">
+                <label class="titulo-personagens">Personagens</label>
                 <label class="text-conteudo">
                     <h2>Leon s. Kennedy</h2>
-                    Elas aparecem somente no Castelo da Família Salazar, e estão sendo
-                    “habitadas” por parasitas Las Plagas que perderam seus hospedeiros humanos.
-
-                    As armaduras conseguem se movimentar graças aos tentáculos das Plagas. Seu ponto fraco é o elmo, que
-                    pode ser arrancado, revelando o parasita e, assim, podendo ser eliminado, o que destrói a armadura
-                    por completo.
+                    Leon Kennedy ficou interessado nos estranhos incidentes que ocorreram nas redondezas de Raccoon
+                    City, e por isso se candidatou a uma vaga no Departamento de Polícia da cidade, após ter concluído
+                    sua formação na academia de polícia. Leon ficou muito orgulhoso por se tornar um policial,
+                    principalmente por sua personalidade protetora e voltada para o senso de justiça.
                 </label>
             </div>
             <div class="conteudo">
-                <img class="img-conteudo" src="imagens/download.jfif">
+                <img class="img-conteudo" src="imagens/adarosto.webp">
                 <label class="text-conteudo">
                     <h2>Ada Wong</h2>
-                    Em essência, o Nemesis é uma arma biológica da espécie Tyrant, já que a sua base viral é o T-Virus.
-                    O que os diferencia, neste caso, é que o Nemesis possui um parasita alojado em seu sistema nervoso,
-                    o NE-Alpha, o que lhe permite assimilar e seguir ordens simples, além de portar armas e ter uma
-                    capacidade regenerativa fora do comum. O nome Nemesis vem da deusa da Vingança na mitologia grega,
-                    mas ele também é conhecido como Pursuer (Perseguidor), por continuar no encalço de seu alvo até
-                    eliminá-lo.
+                    Ada Wong é uma asiática que trabalhou como espiã para uma organização originalmente rival à
+                    Umbrella.
+                    Há poucas informações sobre o seu passado – sequer é possível dizer se seu nome é mesmo Ada.
+                    Com treinamento especial, Ada é definida como uma ótima profissional. Ela conduz seus planos até o
+                    final de forma fria e calculista até mesmo nas situações mais extremas. Os seus sentimentos são o
+                    único obstáculo que podem desviá-la de seus caminhos e objetivos.
                 </label>
             </div>
             <div class="conteudo">
-                <img class="img-conteudo" src="imagens/RE_Tyrant.webp">
+                <img class="img-conteudo" src="imagens/clairerosto.jpg">
                 <label class="text-conteudo">
                     <h2>Claire Redfield</h2>
-                    O Tyrant T-002 é resultado dos testes feitos em sua versão anterior, o Proto Tyrant (ou T-001). Com
-                    o intuito da Umbrella de criar uma arma biológica humanoide, uma espécie de super-soldado capaz de
-                    responder a comandos, o Tyrant foi considerado a forma de vida mais poderosa já criada, com força,
-                    agilidade e resistência incomuns e muito superiores às características de seu protótipo.
+                    Claire Redfield é a irmã mais nova de Chris Redfield e tem muito orgulho do trabalho do irmão, desde
+                    a época dos S.T.A.R.S. Ela tem personalidade forte e mesmo sendo somente uma civil, ela sabe manejar
+                    armas e lockpicks muito bem, graças às lições que aprendeu com o irmão mais velho.
+
+                    Claire levava uma vida perfeitamente normal, sendo uma estudante apaixonada por motocicletas, até o
+                    repentino desaparecimento de Chris. Ela decidiu ir até Raccoon City tentar descobrir o paradeiro de
+                    seu irmão e se envolveu na trágica história da cidade. A partir daí, Claire se viu comovida com as
+                    vítimas da pesquisa ilegal e do bioterrorismo e se tornou uma ativista para combater esse tipo de
+                    atividade.
                 </label>
             </div>
             <div class="conteudo">
-                <img class="img-conteudo" src="imagens/Pachislot_Plant_42.webp">
+                <img class="img-conteudo" src="imagens/ethanrosto.jpg">
                 <label class="text-conteudo">
                     <h2>Ethan Winters</h2>
-                    Após o vazamento do T-Virus no laboratório nos níveis mais inferiores da Propriedade Spencer, outras formas de vida começaram a ser infectadas, entre elas a planta que fica na estufa, no primeiro andar da mansão. O resultado foi uma mutação acidental, com crescimento fora do comum e a criação uma carapaça que a torna mais resistente a danos. Sua “inteligência” e seus reflexos também acabaram sendo aprimorados, e ela ataca quaisquer indivíduos que se aproximam dela com seus tentáculos, cujos golpes podem ser fatais.
+                    O que se sabe antes dos eventos presenciados em Resident Evil 7 é que ele era um engenheiro de
+                    software, e conheceu e se casou com Mia em 2011, residindo com ela no Texas.
+
+                    Pouco tempo depois, Mia viajou por causa do seu trabalho como babá, mandando um vídeo a Ethan
+                    dizendo como estava por lá e que logo estaria em casa novamente. Esse foi o último contato com a
+                    esposa, que acabou desaparecendo por três anos.
+
+                    Ethan deu sua esposa como morta, mas nunca deixou de acreditar que ela pudesse reaparecer, ou que ao
+                    menos a verdade a respeito de seu sumiço um dia viesse à tona.
                 </label>
             </div>
             <div class="conteudo">
-                <img class="img-conteudo" src="imagens/REDSCerberus.webp">
+                <img class="img-conteudo" src="imagens/miarosto.png">
                 <label class="text-conteudo">
                     <h2>Mia Winters</h2>
-                    Cerberus são B.O.W.s. Isto quer dizer que eles foram
-                    geneticamente modificados em laboratório pelo T-Virus, e recebem o código MA-39 de arma viral criada
-                    pela Umbrella.
-
-                    Os cães zumbis estão na mesma categoria que os humanos transformados em mortos vivos: eles sofreram
-                    uma mutação acidental depois de serem contaminados pelo T-Virus devido ao vazamento viral. A
-                    infecção ocorre por exposição ao vírus ao se alimentarem de carne infectada de outros organismos. Os
-                    cães zumbis vistos em Raccoon, na Ilha Rockfort e na Ilha Sheena foram acidentalmente infectados
-                    pelo T-Virus e sofreram decomposição de sua pele e músculos. Assim como os zumbis humanos,
-                    alimentam-se de carne fresca e apresentam um comportamento ainda mais agressivo do que o normal.
+                    Mia Winters desapareceu durante uma viagem a trabalho como babá. Para Ethan, seu marido, ela está
+                    morta há três anos. O desaparecimento de Mia esconde um grande mistério que pode colocar Ethan em
+                    perigo.
                 </label>
             </div>
 
