--- a/public/re3.html
+++ b/public/re3.html
@@ -20,9 +20,7 @@
             <div class="navbar">
                 <button class="btn-header" onclick="abre_jogo()">Jogos</button>
                 <button class="btn-header" onclick="abre_personagens()">Personagens</button>
-                <button class="btn-header" onclick="abre_organizações()">Organizações</button>
                 <button class="btn-header" onclick="abre_criaturas()">Criaturas</button>
-                <button class="btn-header" onclick="abre_virus()">virus</button>
                 <button class="btn-header" onclick="sair()">Sair</button>
             </div>
         </div>
@@ -41,7 +39,7 @@
 
     <div class="banner-imagem">
         <div class="container-personagens">
-            <img src="Imagens/Resident_Evil3logo.png">
+            <img src="Imagens/re3back.jpeg">
         </div>
     </div>
     <div class="conteudo">
